# codeforces

./: .gitignore  README.md  new  new-prob  new.py  pyproject.toml
language_support/: __init__.py  base.py  c.py  cpp.py  javascript.py  python.py  rust.py
problems/ambitious_kid/: README.html
problems/antipalindrome/: README.html
problems/arrays/: README.html
problems/bicycle_chain/: README.html
problems/bogosort/: README.html
problems/captain_flint_and_crew_recruitment/: README.html
problems/cormen_—_the_best_friend_of_a_man/: README.html
problems/delete_from_the_left/: README.html
problems/era/: README.html
problems/free_cash/: README.html
problems/groups/: README.html
problems/holidays/: README.html
problems/indian_summer/: README.html
problems/karina_and_array/: README.html
problems/local_extrema/: README.html
problems/lucky_ticket/: README.html
problems/maximum_in_table/: README.html
problems/maximum_increase/: README.html
problems/maximum_subarray_sum/: README.html
problems/mislove_has_lost_an_array/: README.html
problems/napoleon_cake/: README.html
problems/new_year_and_hurry/: README.html
problems/optimal_reduction/: README.html
problems/perfect_permutation/: README.html
problems/pizzaforces/: README.html
problems/quality_vs_quantity/: README.html
problems/rainbow_dash,_fluttershy_and_chess_coloring/: README.html
problems/required_remainder/: README.html  python.py
problems/restoring_password/: README.html
problems/review_site/: README.html
problems/rule_of_league/: README.html
(+51 files in other folders)
